--- a/styles.css
+++ b/styles.css
@@ -16,14 +16,14 @@ a {
 
 /*////////HEADER////////*/
 
-.encabezado{
+.encabezado {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    justify-content:space-between;
+    justify-content: space-between;
 }
 
-.logo{
+.logo {
     padding: 10px 20px 10px 20px;
 }
 
@@ -55,38 +55,52 @@ h1:hover {
     cursor: pointer;
 }
 
-.redes{
+.redes {
     padding: 0px 20px 0px 20px
 }
 
-.redes a{
+.redes a {
     padding: 5px
 }
 
 /*////////MENU DE NAVEGACION////////*/
 
-nav {
-    width: 100%;
-    padding: 10px 10px ;
+.container-fluid{
     background-color: #0e172c;
 }
 
-nav ul{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
+.navbar {
+    padding-top: 0px;
+    padding-bottom: 0px; 
+    background-color: #0e172c;
+    width: 100%;
 }
 
-nav li {
+.nav-item {
     padding: 10px 20px 10px 20px;
     font-weight: 800;
-    color: #fffffe;
 }
 
-nav li:hover {
+.nav-link{
+   color: #fffffe; 
+}
+
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+    color: #fffffe; 
+}
+
+.nav-link:hover, .navbar-nav .nav-link.active:hover {
     color: #fec7d7;
 }
 
+.navbar-nav{
+    display: flex;
+    justify-content: center;
+}
+
+.navbar-expand-lg .navbar-collapse {
+    justify-content: center;
+}
 
 /*////////MAIN////////*/
 
@@ -97,22 +111,23 @@ main {
 
 /*////////SECCION BEAUTY////////*/
 
-.beauty{
+.beauty {
     margin-top: 60px;
 }
 
-.beauty-flex{
-    display: flex; 
+.beauty-flex {
+    display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly; 
-    margin-top: 50px; 
-    margin-bottom: 35px; 
-    }    
+    justify-content: space-evenly;
+    margin-top: 50px;
+    margin-bottom: 35px;
+}
 
-.beauty h2{
+.beauty h2 {
     text-align: center;
 }
-.img-beauty{
+
+.img-beauty {
     width: 300px;
     height: 245px;
     border-radius: 5px;
@@ -120,7 +135,7 @@ main {
     margin-bottom: 10px;
 }
 
-.beauty p{
+.beauty p {
     margin-left: 75px;
     background-color: #0e172c;
     color: #fffffe;
@@ -130,36 +145,37 @@ main {
     text-align: center;
 }
 
-.beauty p:hover{
-    background-color:#d9d4e7;
-    color:#0e172c; 
+.beauty p:hover {
+    background-color: #d9d4e7;
+    color: #0e172c;
 }
 
 /*////////SECCION OPORTUNIDADES Y OFERTAS////////*/
 
-.ofertas{
+.ofertas {
     background-color: #d9d4e7;
     padding-top: 50px;
 }
 
-.ofertas-flex{
-    display: flex; 
+.ofertas-flex {
+    display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;  
+    justify-content: space-evenly;
     margin-top: 35px;
     margin-bottom: 15px;
     text-align: center;
 }
 
-.ofertas h2{
+.ofertas h2 {
     text-align: center;
 }
-.ofertas p{
+
+.ofertas p {
     font-weight: 600;
     font-size: 20px;
 }
 
-.img-ofertas{
+.img-ofertas {
     width: 400px;
     height: 400px;
     border-radius: 5px;
@@ -167,7 +183,7 @@ main {
     margin-bottom: 10px;
 }
 
-.articles-ofertas{
+.articles-ofertas {
     max-width: 500px;
     padding: 25px;
     font-size: larger;
@@ -175,18 +191,18 @@ main {
 
 /*////////SECCION REGALERIA////////*/
 
-.regaleria p{
+.regaleria p {
     font-weight: 600;
     font-size: 20px;
     margin-bottom: 10px;
 }
 
-.regaleria h2{
+.regaleria h2 {
     text-align: center;
     padding-top: 10px;
 }
 
-.img-regaleria{
+.img-regaleria {
     width: 400px;
     height: 350px;
     border-radius: 5px;
@@ -194,73 +210,219 @@ main {
     margin-bottom: 10px;
 }
 
-.regaleria-flex{
-    display: flex; 
+.regaleria-flex {
+    display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;  
+    justify-content: space-evenly;
     margin-top: 35px;
     padding-bottom: 10px;
     text-align: center;
 }
 
-.articles-regaleria{
+.articles-regaleria {
     max-width: 500px;
     padding: 25px;
     font-size: larger;
     margin: 20px;
 }
 
+/*///////// PAGE FRAGANCIAS CON GRID///////*/
 
-/*////////SECCION MEDIOS DE PAGO////////*/
-
-.descuentos{
+.main-fragancias {
     background-color: #d9d4e7;
-}
-.descuentos h2{
-    text-align: center;
-    padding-top: 10px;
-}
-.img-medios{
-    width: 300px;
-    height: 350px;
-    border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     margin-bottom: 10px;
 }
 
-.descuentos-flex{
-    display: flex; 
-    flex-wrap: wrap;
-    justify-content: space-evenly;  
-    margin-top: 35px;
-    padding-bottom: 10px;
+.main-fragancias h2 {
+    margin: 20px;
 }
 
+.grilla-perfumes-femeninos {
+    background-color: #d9d4e7;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin: 40px;
+}
+
+.grilla-perfumes-masculinos {
+    background-color: #d9d4e7;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin: 40px;
+}
+
+.perfumes {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    text-align: justify;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.img-perfumes {
+    width: 100%;
+    max-width: 400px;
+    max-height: 400PX;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px4;
+    margin-bottom: 15px;
+}
+
+.descripcion{
+    padding: 10px;
+}
+
+span {
+    font-weight: 600;
+}
+
+.precio {
+    font-size: 30px;
+    font-weight: 600;
+    font-style: italic;
+}
+
+/*///////// PAGE MAQUILLAJE CON GRID///////*/
+
+.main-maquillajes {
+    background-color: #d9d4e7;
+    margin-bottom: 10px;
+    display: grid;
+    grid-template-areas: 
+    "nav h2"
+    "nav h3"
+    "nav grilla-maquillajes";
+    grid-template-columns: 200px 1fr ;
+    grid-template-rows: 50px 50px auto;
+    gap: 10px;
+}
+
+.main-maquillajes h2, h3{
+    grid-area: h2;
+    margin-top: 10px;
+}
+
+.main-maquillajes h3{
+    grid-area: h3;
+    text-align: center;
+}
+
+
+.grilla-maquillajes{
+   display: grid;
+   grid-area: grilla-maquillajes;
+   grid-template-columns: repeat(4, 1fr);
+   gap: 20px;
+   margin: 40px;
+}
+
+.perfumes {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    text-align: justify;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.img-perfumes {
+    width: 100%;
+    max-width: 400px;
+    max-height: 400PX;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px4;
+    margin-bottom: 15px;
+}
+
+.descripcion{
+    padding: 10px;
+}
+
+span {
+    font-weight: 600;
+}
+
+.precio {
+    font-size: 30px;
+    font-weight: 600;
+    font-style: italic;
+}
+
+
+
+/*////////SECCION MEDIOS DE PAGO////////*/
+
+.descuentos {
+    display: grid;
+    grid-template-areas: 
+    "h2 h2"
+    "carrusel video";
+    grid-template-columns: repeat(2, 1fr);
+    background-color: #d9d4e7;
+    justify-items: center;
+    align-items: center;
+}
+
+.descuentos h2 {
+    grid-area: h2;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.d-block{
+    width: 300px;
+    height: 350px;
+    object-fit:contain;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.video{
+    grid-area: video;
+}
+
+.v1{
+    width: 80%;
+    border-radius: 8px;
+    max-width: 700px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.carousel-inner{
+    grid-area: carrusel;
+    padding: 50px;
+}
+
+
 /*////////FOOTER////////*/
-footer{
+footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
-.derechos{
+.derechos {
     background-color: #0e172c;
     border: 3px solid black;
     text-align: center;
     width: 100%;
 }
-.derechos p{
+
+.derechos p {
     font-size: small;
     font-weight: 600;
-    color:#fffffe
+    color: #fffffe
 }
 
-.contacto{
+.contacto {
     padding: 20px;
     margin-top: 25px;
 }
 
-.contacto-flex{
+.contacto-flex {
     display: flex;
     flex-direction: column;
 }
@@ -268,51 +430,51 @@ footer{
 .contacto a {
     margin-top: 30px;
     font-weight: 500;
-    color:#0e172c;
+    color: #0e172c;
 }
 
-.pc{
+.pc {
     margin-top: 12px;
 }
 
-.nosotros{
+.nosotros {
     display: flex;
     flex-direction: column;
     padding: 20px;
 }
-.nosotros a{
+
+.nosotros a {
     margin-top: 30px;
     font-weight: 500;
     color: #0e172c;
 }
 
-.nosotros a:hover{
+.nosotros a:hover {
     color: #fffffe;
 }
-.ntitulos{
+
+.ntitulos {
     font-weight: 500;
     color: #0e172c;
 }
 
-.ntitulos:hover{
+.ntitulos:hover {
     color: #fffffe;
 }
 
-.maps{
+.maps {
     padding: 20px;
 }
 
-.mapa{
-    width:400px;
+.mapa {
+    width: 400px;
     height: 250px;
     border-radius: 8px;
 }
 
 /*////////FORMULARIO////////*/
 
-.formulario h3, h2{
+.formulario h3,
+h2 {
     text-align: center;
 }
-
-
-
